// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with edit permission 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileExporters
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfilePermissions
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
    </div>
  </div>
</div>
`;

exports[`renders without permissions 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileExporters
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        exporters={Array []}
        onRequestFail={[MockFunction]}
        organization="org"
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
    </div>
  </div>
</div>
`;
